force-app/main/default/objects/Pubs_Targets__c/Pubs_Targets__c.object-meta.xml
<CustomObject>
    <label>Pubs Target</label>
    <nameField>
        <label>Pubs Reference Table</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pubs Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>