force-app/main/default/objects/Pubs_Targets__c/fields/Manual_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Manual_Deviation__c</fullName>
    <label>Manual Deviation</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>