force-app/main/default/objects/Pubs_Targets__c/fields/Manual_Target__c.field-meta.xml
<CustomField>
    <fullName>Manual_Target__c</fullName>
    <label>Manual Target</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>