force-app/main/default/objects/Pubs_Targets__c/fields/oBom_Pages__c.field-meta.xml
<CustomField>
    <fullName>oBom_Pages__c</fullName>
    <label>oBom Pages</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>