force-app/main/default/objects/Pubs_Targets__c/fields/Quantity_of_Drawings__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Drawings__c</fullName>
    <label>Quantity New Drawings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>