force-app/main/default/objects/Pubs_Targets__c/recordTypes/Parts.recordType-meta.xml
<RecordType>
    <fullName>Parts</fullName>
    <active>true</active>
    <description>Targets for Parts Manuals</description>
    <label>Parts</label>
</RecordType>