force-app/main/default/objects/Pubs_Targets__c/recordTypes/Schematics.recordType-meta.xml
<RecordType>
    <fullName>Schematics</fullName>
    <active>true</active>
    <description>Targets for Schematics Manuals</description>
    <label>Schematics</label>
</RecordType>