force-app/main/default/objects/Pubs_Targets__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Manual_Target__c</columns>
    <columns>Manual_Deviation__c</columns>
    <columns>oBom_Pages__c</columns>
    <columns>Quantity_of_Drawings__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>